<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:persistent="false"
        android:title="@string/pref_title_application_version"
        android:summary="1.0" />

    <Preference
        android:persistent="false"
        android:title="@string/pref_title_author"
        android:summary="@string/pref_description_author" />

    <Preference
        android:persistent="false"
        android:key="github"
        android:title="@string/pref_title_github"
        android:summary="@string/pref_description_github" />

    <Preference
        android:persistent="false"
        android:key="readme"
        android:title="@string/pref_title_readme"
        android:summary="@string/pref_description_readme" />

</PreferenceScreen>
