<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="never_ask"
        android:summary="@string/pref_description_always_use_default_engine"
        android:title="@string/pref_title_always_use_default_engine" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/default_filename"
        android:inputType="text"
        android:key="default_filename"
        android:persistent="true"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_default_filename" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="WebView"
        android:entries="@array/pref_engines_names"
        android:entryValues="@array/pref_engines_values"
        android:key="default_engine"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_default_engine" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_project_path"
        android:inputType="text"
        android:key="project_path"
        android:persistent="true"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_project_path" />

</PreferenceScreen>
