<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ml.a0x0000000000.mjavascript.EditActivity">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_save_white"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="100"
        android:title="@string/save_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_to"
        android:orderInCategory="100"
        android:title="@string/go_to"
        app:showAsAction="never" />
</menu>
