<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="ml.a0x00000000.mjavascript.SettingsActivity$EnginesPreferenceFragment"
        android:icon="@drawable/ic_engine_gray"
        android:title="@string/pref_header_engines" />

    <header
        android:fragment="ml.a0x00000000.mjavascript.SettingsActivity$AboutReadmePreferenceFragment"
        android:icon="@drawable/ic_about_readme_gray"
        android:title="@string/pref_header_about_readme" />

    <header
        android:fragment="ml.a0x00000000.mjavascript.SettingsActivity$HelpFeedbackPreferenceFragment"
        android:icon="@drawable/ic_feedback_gray"
        android:title="@string/pref_header_help_feedback" />

</preference-headers>
